<resources>
    <string name="app_name">Keyper</string>
    <string name="master_key_window">"Master Key"</string>
    <string name="enter_master_key">"Enter the Master Key"</string>
    <string name="service_name">"Service name:"</string>
    <string name="sign_in">"sign in"</string>
    <string name="service_name_window">"Service Name"</string>
    <string name="password">"Password:"</string>
    <string name="password_window">"Password"</string>
    <string name="example">"example"</string>
    <string name="save_password_button">"save password"</string>
    <string name="chars_number">"Number of characters:"</string>
    <string name="fill_input_fields">"Fill in the input fields"</string>
    <string name="tap_button">"Tap button"</string>
    <string name="add_password_button">"add new password"</string>
    <string name="generate_password_button">"generate new password"</string>
    <string name="generate_password_first">"Generate password first!"</string>
    <string name="update_password_button">"update existing password"</string>
    <string name="update_password">"update password"</string>
    <string name="view_passwords_button">"view my passwords"</string>
    <string name="update_master_key_button">"update master key"</string>
    <string name="preferences">"Preferences:"</string>
    <string name="choose_from_listed">"Choose from listed options"</string>
    <string name="fill_new_master_key">"Fill in the new Master Key"</string>
    <string name="uppercase_letters">"Uppercase letters"</string>
    <string name="special_chars">"Special characters"</string>
    <string name="digits">"Digits"</string>
    <string name="save_error">"Save error occurred!"</string>
    <string name="save_successful">"Password saved!"</string>
    <string name="update_error">"Update error occurred!"</string>
    <string name="update_successful">"Password updated!"</string>
    <string name="masterkey_update_successful">"Master Key updated!"</string>
    <string name="missing_fields_error">"Fill in all input fields!"</string>
    <string name="empty_string">""</string>
    <string name="wrong_password">"Wrong password!"</string>
    <string name="no_password">"Enter password!"</string>
    <string name="use_biometrics">"use biometrics"</string>
    <string name="successful_login">"Successful login!"</string>
    <string name="auth_failed">"Authentication failed!"</string>
    <string name="main_menu">"Main menu"</string>
</resources>