<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PassCreatorActivity">

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="@dimen/logo_width"
        android:layout_height="@dimen/logo_height"
        android:layout_marginTop="@dimen/logo_margin_top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022"
        app:srcCompat="@drawable/keyper" />

    <TextView
        android:id="@+id/updateEnterServiceInfoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_regular"
        android:fontFamily="@font/baloo"
        android:gravity="center"
        android:text="@string/fill_input_fields"
        android:textColor="@color/text"
        android:textSize="@dimen/text_regular"
        app:layout_constraintStart_toStartOf="@+id/updateTextServiceInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/appLogo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/updateTextServiceInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/window_side_margin"
        android:layout_marginTop="@dimen/spacing_small"
        android:layout_marginEnd="@dimen/window_side_margin"
        android:gravity="center"
        android:hint="@string/service_name_window"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateEnterServiceInfoTextView">


        <EditText
            android:id="@+id/updateServiceNameTextView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/window_height"
            android:background="#606300ee"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:drawablePadding="-24sp"
            android:drawableTint="@color/white"
            android:ems="5"
            android:fontFamily="@font/baloo"
            android:gravity="center"
            android:inputType="text"
            android:maxLines="1"
            android:nestedScrollingEnabled="false"
            android:paddingBottom="24dp"
            android:textColor="@color/purple_500"
            android:textColorHint="@color/purple_500" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/updateTextPassInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/window_side_margin"
        android:layout_marginTop="@dimen/spacing_regular"
        android:layout_marginEnd="@dimen/window_side_margin"
        android:gravity="center_vertical"
        android:hint="@string/password_window"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateTextServiceInputLayout"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/drawable_window">

        <EditText
            android:id="@+id/updateServicePasswordTextView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/window_height"
            android:background="#606300ee"
            android:drawableStart="@drawable/ic_baseline_vpn_key_24"
            android:drawableTint="@color/drawable_window"
            android:ems="5"
            android:fontFamily="@font/baloo"
            android:gravity="center"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingBottom="24dp"
            android:textColor="@color/purple_500"
            android:textColorHint="#ffffff" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/updatePasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_regular"
        android:fontFamily="@font/baloo"
        android:text="@string/update_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateTextPassInputLayout" />

    <TextView
        android:id="@+id/updatingInfoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_regular"
        android:height="@dimen/icon_size"
        android:fontFamily="@font/baloo"
        android:textSize="@dimen/text_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updatePasswordButton" />

</androidx.constraintlayout.widget.ConstraintLayout>