<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PassCreatorActivity">

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="@dimen/logo_width"
        android:layout_height="@dimen/logo_height"
        android:layout_marginTop="@dimen/logo_margin_top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022"
        app:srcCompat="@drawable/keyper" />

    <TextView
        android:id="@+id/enterServiceInfoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_regular"
        android:fontFamily="@font/baloo"
        android:text="@string/fill_input_fields"
        android:textColor="@color/text"
        android:textSize="@dimen/text_regular"
        app:layout_constraintStart_toStartOf="@+id/textServiceInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/appLogo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textServiceInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/window_side_margin"
        android:layout_marginTop="@dimen/spacing_small"
        android:layout_marginEnd="@dimen/window_side_margin"
        android:hint="@string/service_name_window"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterServiceInfoTextView">

        <EditText
            android:id="@+id/serviceNameTextView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/window_height"
            android:background="#606300ee"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:drawablePadding="-24sp"
            android:drawableTint="@color/white"
            android:fontFamily="@font/baloo"
            android:gravity="center"
            android:inputType="text"
            android:maxLines="1"
            android:paddingBottom="24dp"
            android:textColor="@color/purple_500"
            android:textColorHint="#ffffffff" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/window_side_margin"
        android:layout_marginTop="@dimen/spacing_regular"
        android:layout_marginEnd="@dimen/window_side_margin"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textServiceInputLayout">

        <TextView
            android:id="@+id/servicePasswordDrawableTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#606300ee"
            android:drawableStart="@drawable/ic_baseline_vpn_key_24"
            android:drawableTint="@color/drawable_window"
            android:fontFamily="@font/baloo"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="16dp"
            android:textColor="@color/purple_500"
            android:textColorHint="#ffffff" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textPassInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:hint="@string/password_window"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textServiceInputLayout"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#ffffff">

            <EditText
                android:id="@+id/servicePasswordTextView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/window_height"
                android:background="#606300ee"
                android:ems="5"
                android:fontFamily="@font/baloo"
                android:gravity="center"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingBottom="24dp"
                android:textColor="@color/purple_500"
                android:textColorHint="#ffffff" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/savePasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_regular"
        android:fontFamily="@font/baloo"
        android:text="@string/save_password_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/savingInfoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:height="@dimen/icon_size"
        android:fontFamily="@font/baloo"
        android:textSize="@dimen/text_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/savePasswordButton" />

</androidx.constraintlayout.widget.ConstraintLayout>